always show labels on PCA, fixed svd no convergence (caused by matrix dimension mis alignment)

--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,9 @@ svg text::selection {
 
 #dimReductionPlot .label{
   pointer-events: none;
+  font-size: 0.8rem;
+  dominant-baseline: mathematical;
+  text-anchor: middle;
 }
 
 .secondRow #heatmap {
